Refactoring multiple Resolve